@@ -14,23 +14,22 @@
 
 package com.dynamo.bob.pipeline;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
+import com.dynamo.bob.pipeline.LuaScanner.Property;
+import com.dynamo.bob.pipeline.LuaScanner.Property.Status;
+import org.apache.commons.io.IOUtils;
+import org.junit.Test;
 
+import javax.vecmath.Quat4d;
+import javax.vecmath.Vector3d;
+import javax.vecmath.Vector4d;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.util.List;
 
-import javax.vecmath.Quat4d;
-import javax.vecmath.Vector3d;
-import javax.vecmath.Vector4d;
-
-import org.apache.commons.io.IOUtils;
-import org.junit.Test;
-
-import com.dynamo.bob.pipeline.LuaScanner.Property;
-import com.dynamo.bob.pipeline.LuaScanner.Property.Status;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.fail;
 
 public class LuaScannerTest {
 
@@ -42,19 +41,16 @@ public class LuaScannerTest {
     }
 
     private void assertValidRequire(String test, String expected) {
-        LuaScanner scanner = new LuaScanner();
-        scanner.parse(test);
-        List<String> modules = scanner.getModules();
-        assertTrue(modules.size() == 1);
-        assertEquals(expected, modules.get(0));
+        List<String> modules = LuaScanner.parse(test).modules();
+        assertEquals(1, modules.size());
+        assertEquals(expected, modules.getFirst());
     }
 
     @Test
     public void testScanner() throws Exception {
         String file = getFile("test_scanner.lua");
-        LuaScanner scanner = new LuaScanner();
-        scanner.parse(file);
-        List<String> modules = scanner.getModules();
+        var result = LuaScanner.parse(file);
+        List<String> modules = result.modules();
 
         assertEquals("a", modules.get(0));
         assertEquals("b", modules.get(1));
@@ -84,7 +80,7 @@ public class LuaScannerTest {
         assertEquals("foo14", modules.get(25));
         assertEquals("foo15", modules.get(26));
         assertEquals("foo16", modules.get(27));
-        assertTrue(modules.size() == 28);
+        assertEquals(28, modules.size());
 
         // test require detection with a trailing comment
         assertValidRequire("require \"foo.bar\" -- some comment", "foo.bar");
@@ -105,13 +101,13 @@ public class LuaScannerTest {
         assertValidRequire("require ('foo.bar') --[[ some comment]]--", "foo.bar");
 
         int linesInFile = file.split("\r\n|\r|\n").length;
-        int linesAfterScanner = scanner.getParsedLua().split("\r\n|\r|\n").length;
+        int linesAfterScanner = result.code().split("\r\n|\r|\n").length;
         assertEquals(linesInFile, linesAfterScanner);
     }
 
     private Property findProperty(List<Property> properties, String name) {
         for (Property p : properties) {
-            if (p.name != null && p.name.equals(name)) {
+            if (p.name() != null && p.name().equals(name)) {
                 return p;
             }
         }
@@ -120,26 +116,24 @@ public class LuaScannerTest {
 
     private void assertProperty(List<Property> properties, String name, Object value, int line) {
         Property property = findProperty(properties, name);
-        if (property != null && property.status == Status.OK && property.name.equals(name)) {
-            assertEquals(value, property.value);
-            assertEquals(line, property.line);
+        if (property != null && property.status() == Status.OK && property.name().equals(name)) {
+            assertEquals(value, property.value());
+            assertEquals(line, property.startLine());
             return;
         }
-        assertTrue(false);
+        fail();
     }
 
     private void assertPropertyStatus(List<Property> properties, String name, Status status, int line) {
         Property property = findProperty(properties, name);
-        assertTrue(property != null && property.status == status && property.line == line);
+        assertTrue(property != null && property.status() == status && property.startLine() == line);
     }
 
-    private List<Property> getPropertiesFromString(String s) throws IOException, LuaScanner.LuaScannerException {
-        LuaScanner scanner = new LuaScanner();
-        scanner.parse(s);
-        return scanner.getProperties();
+    private List<Property> getPropertiesFromString(String s) {
+        return LuaScanner.parse(s).properties();
     }
 
-    private List<Property> getPropertiesFromFile(String path) throws IOException, LuaScanner.LuaScannerException {
+    private List<Property> getPropertiesFromFile(String path) throws IOException {
         return getPropertiesFromString(getFile(path));
     }
 
@@ -153,7 +147,7 @@ public class LuaScannerTest {
         assertProperty(properties, "prop3", Double.valueOf(0), 14);
         assertProperty(properties, "prop4", Double.valueOf(0), 15);
         assertProperty(properties, "prop5", Double.valueOf(0), 16);
-        assertEquals(Status.INVALID_ARGS, properties.get(5).status);
+        assertEquals(Status.INVALID_ARGS, properties.get(5).status());
         assertPropertyStatus(properties, "three_args", Status.INVALID_VALUE, 19);
         assertPropertyStatus(properties, "unknown_type", Status.INVALID_VALUE, 20);
     }
@@ -161,27 +155,26 @@ public class LuaScannerTest {
     @Test
     public void testPropsStripped() throws Exception {
         String source = getFile("test_props.lua");
-        LuaScanner scanner = new LuaScanner();
-        source = scanner.parse(source);
-        List<Property> properties = scanner.getProperties();
+        var result = LuaScanner.parse(source);
+        source = result.code();
+        List<Property> properties = result.properties();
         assertEquals(8, properties.size());
         assertProperty(properties, "prop1", Double.valueOf(0), 10);
         assertProperty(properties, "prop2", Double.valueOf(0), 13);
         assertProperty(properties, "prop3", Double.valueOf(0), 14);
         assertProperty(properties, "prop4", Double.valueOf(0), 15);
         assertProperty(properties, "prop5", Double.valueOf(0), 16);
-        assertEquals(Status.INVALID_ARGS, properties.get(5).status);
+        assertEquals(Status.INVALID_ARGS, properties.get(5).status());
         assertPropertyStatus(properties, "three_args", Status.INVALID_VALUE, 19);
         assertPropertyStatus(properties, "unknown_type", Status.INVALID_VALUE, 20);
 
         int linesInSource = source.split("\r\n|\r|\n").length;
-        int linesAfterScanner = scanner.getParsedLua().split("\r\n|\r|\n").length;
+        int linesAfterScanner = result.code().split("\r\n|\r|\n").length;
         assertEquals(linesInSource, linesAfterScanner);
-        
+
         // parse the already stripped source
         // there should be no properties left
-        scanner.parse(source);
-        properties = scanner.getProperties();
+        properties = LuaScanner.parse(source).properties();
         assertEquals(0, properties.size());
     }
 
@@ -209,10 +202,9 @@ public class LuaScannerTest {
 
     @Test
     public void testPropsUrl() throws Exception {
-        LuaScanner scanner = new LuaScanner();
-        scanner.parse(getFile("test_props_url.lua"));
-        List<Property> properties = scanner.getProperties();
-        List<LuaScanner.LuaScannerException> exceptions = scanner.exceptions;
+        var result = LuaScanner.parse(getFile("test_props_url.lua"));
+        var properties = result.properties();
+        var errors = result.errors();
 
         assertEquals(11, properties.size());
         assertProperty(properties, "prop1", "url", 0);
@@ -223,31 +215,32 @@ public class LuaScannerTest {
         assertProperty(properties, "prop6", "socket:/path/to/object#fragment", 5);
         assertProperty(properties, "prop7", "socket-hash:/path/to/object-hash#fragment-hash", 6);
         assertProperty(properties, "prop8", ":#", 7);
-        // prop9, prop10, prop11 throw exception and line number starts from 1
-        assertEquals(3, exceptions.size());
-        assertEquals(9, exceptions.get(0).getLineNumber());
-        assertEquals(10, exceptions.get(1).getLineNumber());
-        assertEquals(11, exceptions.get(2).getLineNumber());
+
+        // prop9, prop10, prop11 throw exception and line number starts from 0
+        assertEquals(3, errors.size());
+        assertEquals(8, errors.get(0).startLine());
+        assertEquals(9, errors.get(1).startLine());
+        assertEquals(10, errors.get(2).startLine());
     }
 
     @Test
     public void testPropsVec3() throws Exception {
         List<Property> properties = getPropertiesFromFile("test_props_vec3.lua");
 
-        assertEquals(4, properties.size());
+        assertEquals(3, properties.size());
         assertProperty(properties, "prop1", new Vector3d(), 0);
         assertProperty(properties, "prop2", new Vector3d(1, 2, 3), 1);
-        assertProperty(properties, "prop4", new Vector3d(2, 2, 2), 3);
+        assertPropertyStatus(properties, "prop3", Status.INVALID_VALUE, 2);
     }
 
     @Test
     public void testPropsVec4() throws Exception {
         List<Property> properties = getPropertiesFromFile("test_props_vec4.lua");
 
-        assertEquals(4, properties.size());
+        assertEquals(3, properties.size());
         assertProperty(properties, "prop1", new Vector4d(), 0);
         assertProperty(properties, "prop2", new Vector4d(1, 2, 3, 4), 1);
-        assertProperty(properties, "prop4", new Vector4d(2, 2, 2, 2), 3);
+        assertPropertyStatus(properties, "prop3", Status.INVALID_VALUE, 2);
     }
 
     @Test
@@ -284,22 +277,19 @@ public class LuaScannerTest {
     @Test
     public void testCommentRemoving() throws Exception {
         // few comments
-        String luaCode = 
+        String luaCode =
             "local var = 1\n" +
             "-- comment 1\n" +
             "-- comment 2\n" +
             "-- comment 3\n" +
             "local var2 = 2\n";
-        LuaScanner scanner = new LuaScanner();
-        scanner.parse(luaCode);
-        String parsed = scanner.getParsedLua();
-        String expected = 
+        String expected =
             "local var = 1\n" +
             "\n" +
             "\n" +
             "\n" +
             "local var2 = 2\n";
-        assertEquals(expected, parsed);
+        assertEquals(expected, LuaScanner.parse(luaCode).code());
 
         // Function with comment
         luaCode =
@@ -308,86 +298,68 @@ public class LuaScannerTest {
             "-- Some comment\n" +
             "end\n";
 
-        scanner = new LuaScanner();
-        scanner.parse(luaCode);
-        parsed = scanner.getParsedLua();
         expected =
             "local function run(self)\n" +
             "self.temp = 1" +
             "\n" +
             "end\n";
-        assertEquals(expected, parsed);
+        assertEquals(expected, LuaScanner.parse(luaCode).code());
 
         // With comment
         luaCode =
             "local var = 2 -- Some comment\n";
 
-        scanner = new LuaScanner();
-        scanner.parse(luaCode);
-        parsed = scanner.getParsedLua();
         expected =
             "local var = 2 \n";
-        assertEquals(expected, parsed);
+        assertEquals(expected, LuaScanner.parse(luaCode).code());
 
         // With multiline comment
         luaCode =
-            "local var = 2 --[[Some multiline comment\n"+
+            "local var = 2 --[[Some multiline comment\n" +
             "line two]]--\n";
 
-        scanner = new LuaScanner();
-        scanner.parse(luaCode);
-        parsed = scanner.getParsedLua();
         expected =
-            "local var = 2 \n"+
+            "local var = 2 \n" +
             "\n";
-        assertEquals(expected, parsed);
+        assertEquals(expected, LuaScanner.parse(luaCode).code());
 
         // With multiline comment
         luaCode =
-            "--[[Some comment\n"+
+            "--[[Some comment\n" +
             "line two]]--\n";
 
-        scanner = new LuaScanner();
-        scanner.parse(luaCode);
-        parsed = scanner.getParsedLua();
         expected =
-            "\n"+
+            "\n" +
             "\n";
-        assertEquals(expected, parsed);
+        assertEquals(expected, LuaScanner.parse(luaCode).code());
 
         // With multiline comment
         luaCode =
-            "--[[Some comment\n"+
+            "--[[Some comment\n" +
             "line two]]local var = 2\n";
 
-        scanner = new LuaScanner();
-        scanner.parse(luaCode);
-        parsed = scanner.getParsedLua();
         expected =
-            "\n"+
+            "\n" +
             "local var = 2\n";
-        assertEquals(expected, parsed);
+        assertEquals(expected, LuaScanner.parse(luaCode).code());
     }
 
     @Test
-    public void testRemoveEmptyLifecycleFunctions() throws Exception {
+    public void testRemoveEmptyLifecycleFunctions() {
         // Basic
-        String luaCode = 
+        String luaCode =
             "local var = 1\n" +
             "function update(self, dt)\n" +
             "\n" +
             "end\n" +
             "local var2 = 2\n";
-        LuaScanner scanner = new LuaScanner();
-        scanner.parse(luaCode);
-        String parsed = scanner.getParsedLua();
-        String expected = 
+        String expected =
             "local var = 1\n" +
             "  \n" +
             "\n" +
             "\n" +
             "local var2 = 2\n";
-        assertEquals(expected, parsed);
+        assertEquals(expected, LuaScanner.parse(luaCode).code());
 
         // With comment
         luaCode =
@@ -397,16 +369,13 @@ public class LuaScannerTest {
             "end\n" +
             "local var2 = 2\n";
 
-        scanner = new LuaScanner();
-        scanner.parse(luaCode);
-        parsed = scanner.getParsedLua();
         expected =
             "local var = 1\n" +
             " \n" +
             "\n" +
             "\n" +
             "local var2 = 2\n";
-        assertEquals(expected, parsed);
+        assertEquals(expected, LuaScanner.parse(luaCode).code());
 
         // With multiline comment
         luaCode =
@@ -415,15 +384,12 @@ public class LuaScannerTest {
             "next line]]--\n" +
             "end\n";
 
-        scanner = new LuaScanner();
-        scanner.parse(luaCode);
-        parsed = scanner.getParsedLua();
         expected =
             " \n" +
             "\n" +
             "\n" +
             "\n";
-        assertEquals(expected, parsed);
+        assertEquals(expected, LuaScanner.parse(luaCode).code());
 
         // With _G
         luaCode =
@@ -431,14 +397,11 @@ public class LuaScannerTest {
             "end\n" +
             "local var2 = 2\n";
 
-        scanner = new LuaScanner();
-        scanner.parse(luaCode);
-        parsed = scanner.getParsedLua();
         expected =
             " \n" +
             "\n" +
             "local var2 = 2\n";
-        assertEquals(expected, parsed);
+        assertEquals(expected, LuaScanner.parse(luaCode).code());
 
         // local function
         luaCode =
@@ -448,16 +411,13 @@ public class LuaScannerTest {
             "end\n" +
             "local var2 = 2\n";
 
-        scanner = new LuaScanner();
-        scanner.parse(luaCode);
-        parsed = scanner.getParsedLua();
         expected =
             "local var = 1\n" +
             "local init = function(self)\n" +
             "\n" +
             "end\n" +
             "local var2 = 2\n";
-        assertEquals(expected, parsed);
+        assertEquals(expected, LuaScanner.parse(luaCode).code());
 
         // local function 2
         luaCode =
@@ -467,16 +427,13 @@ public class LuaScannerTest {
             "end\n" +
             "local var2 = 2\n";
 
-        scanner = new LuaScanner();
-        scanner.parse(luaCode);
-        parsed = scanner.getParsedLua();
         expected =
             "local var = 1\n" +
             "local function init(self)\n" +
             "\n" +
             "end\n" +
             "local var2 = 2\n";
-        assertEquals(expected, parsed);
+        assertEquals(expected, LuaScanner.parse(luaCode).code());
 
         // not empty
         luaCode =
@@ -486,77 +443,173 @@ public class LuaScannerTest {
             "end\n" +
             "local var2 = 2\n";
 
-        scanner = new LuaScanner();
-        scanner.parse(luaCode);
-        parsed = scanner.getParsedLua();
         expected =
             "local var = 1\n" +
             "local function fixed_update(self)\n" +
             "self.var = 1\n" +
             "end\n" +
             "local var2 = 2\n";
-        assertEquals(expected, parsed);
+        assertEquals(expected, LuaScanner.parse(luaCode).code());
     }
 
     @Test
-    public void testSemicolon() throws Exception {
+    public void testSemicolon() {
         // Basic
         String luaCode = "do return nil end;else end;";
-        LuaScanner scanner = new LuaScanner();
-        scanner.parse(luaCode);
         String expected = "do return nil end;else end;";
-        assertEquals(expected, scanner.getParsedLua());
+        assertEquals(expected, LuaScanner.parse(luaCode).code());
 
         luaCode = "local tbl = {a = 1,b=2;c=3}";
-        scanner = new LuaScanner();
-        scanner.parse(luaCode);
         expected = "local tbl = {a = 1,b=2;c=3}";
-        assertEquals(expected, scanner.getParsedLua());
+        assertEquals(expected, LuaScanner.parse(luaCode).code());
 
         luaCode = "go.property('semi1', 1);go.property('semi2', 2)";
-        scanner = new LuaScanner();
-        scanner.parse(luaCode);
         expected = "  ";
-        assertEquals(expected, scanner.getParsedLua());
+        assertEquals(expected, LuaScanner.parse(luaCode).code());
     }
 
     @Test
-    public void testGoPropertyHash() throws Exception {
+    public void testGoPropertyHash() {
         String luaCode = "go.property(\"hash1\", hash(\"value\"))";
-        LuaScanner scanner = new LuaScanner();
-        scanner.parse(luaCode);
         String expected = " ";
-        assertEquals(expected, scanner.getParsedLua());
+        assertEquals(expected, LuaScanner.parse(luaCode).code());
 
-        scanner = new LuaScanner();
-        scanner.setDebug();
-        scanner.parse(luaCode);
-        expected = " hash(\"value\")";
-        assertEquals(expected, scanner.getParsedLua());
+        expected = "                     hash(\"value\") ";
+        assertEquals(expected, LuaScanner.parse(luaCode, true).code());
 
         luaCode = "go.property(\"hash2\", hash \"value\")";
-        scanner = new LuaScanner();
-        scanner.parse(luaCode);
         expected = "  ";
-        assertEquals(expected, scanner.getParsedLua());
+        assertEquals(expected, LuaScanner.parse(luaCode).code());
 
-        luaCode = "go.property(\"hash3\", hash \"value\")";
-        scanner = new LuaScanner();
-        scanner.setDebug();
-        scanner.parse(luaCode);
-        expected = " hash \"value\"";
-        assertEquals(expected, scanner.getParsedLua());
+        luaCode  = "go.property(\"hash3\", hash \"value\")";
+        expected = "                     hash \"value\" ";
+        assertEquals(expected, LuaScanner.parse(luaCode, true).code());
 
         luaCode = "go.property(\"data_texture\", resource.texture(\"/builtins/assets/images/logo/logo_256.png\"))";
-        scanner = new LuaScanner();
-        scanner.parse(luaCode);
         expected = " ";
-        assertEquals(expected, scanner.getParsedLua());
+        assertEquals(expected, LuaScanner.parse(luaCode).code());
 
-        scanner = new LuaScanner();
-        scanner.setDebug();
-        scanner.parse(luaCode);
-        expected = " ";
-        assertEquals(expected, scanner.getParsedLua());
+        expected = "                                                                                          ";
+        assertEquals(expected, LuaScanner.parse(luaCode, true).code());
+    }
+
+    private static void assertCompilesToInDebug(String expected, String actual) {
+        assertEquals("`" + expected + "`", "`" + LuaScanner.parse(actual, true).code() + "`");
+    }
+
+    @Test
+    public void testGoPropertyWhitespace() {
+        assertCompilesToInDebug(
+                "             ",
+                "go.property()");
+        assertCompilesToInDebug(
+                "                    hash('') ",
+                "go.property('name', hash(''))");
+        assertCompilesToInDebug(
+                "                   hash('') ",
+                "go.property('name',hash(''))");
+        assertCompilesToInDebug(
+                "                                                   ",
+                "go.property('name', resource.texture('/image.png'))");
+        assertCompilesToInDebug(
+                "                       \nfoo()",
+                "go.property('name', 1) -- comment\nfoo()");
+
+        assertCompilesToInDebug(
+                "                                                             ",
+                "go.property('name1', 1) --[[comment]] go.property('name2', 2)");
+        assertCompilesToInDebug(
+                "                   \n                    ",
+                "go.property('name',\n            123456) ");
+        assertCompilesToInDebug(
+                "do\n                          \nend",
+                "do\n    go.property('name', 1)\nend");
+        assertCompilesToInDebug(
+                "              ",
+                "go.property();");
+        assertCompilesToInDebug(
+                "             \n ",
+                "go.property()\n;");
+        assertCompilesToInDebug(
+                "               ",
+                "go.property(); -- comment");
+        assertCompilesToInDebug(
+                "             \n  ",
+                "go.property()\n; -- comment");
+        assertCompilesToInDebug(
+                "                                                     ",
+                "go.property('name;', resource.texture('/image.png'));");
+        assertCompilesToInDebug(
+                "                    \n                     ",
+                "go.property('name;',\n            123456); -- comment");
+    }
+
+    @Test
+    public void testGoPropertyNesting() {
+
+        var properties = LuaScanner.parse("go.property('top-level', 1)\nfunction init() go.property('nested', 2) end").properties();
+        assertEquals(2, properties.size());
+        assertPropertyStatus(properties, "top-level", Status.OK, 0);
+        assertPropertyStatus(properties, "nested", Status.INVALID_LOCATION, 1);
+
+        // ret fn
+        properties = LuaScanner.parse("return function() go.property('ret', 1) end").properties();
+        assertEquals(1, properties.size());
+        assertPropertyStatus(properties, "ret", Status.INVALID_LOCATION, 0);
+
+        // ret
+        properties = LuaScanner.parse("return go.property('ret', 1)").properties();
+        assertEquals(1, properties.size());
+        assertPropertyStatus(properties, "ret", Status.INVALID_LOCATION, 0);
+
+        // do
+        properties = LuaScanner.parse("do go.property('do', 1) end").properties();
+        assertEquals(1, properties.size());
+        assertPropertyStatus(properties, "do", Status.INVALID_LOCATION, 0);
+
+        // while
+        properties = LuaScanner.parse("while false do go.property('while', 1) end").properties();
+        assertEquals(1, properties.size());
+        assertPropertyStatus(properties, "while", Status.INVALID_LOCATION, 0);
+
+        // nested function call
+        properties = LuaScanner.parse("print(go.property('printed', 1))").properties();
+        assertEquals(1, properties.size());
+        assertPropertyStatus(properties, "printed", Status.INVALID_LOCATION, 0);
+
+        // index
+        properties = LuaScanner.parse("foo[go.property('index', 1)] = 1").properties();
+        assertEquals(1, properties.size());
+        assertPropertyStatus(properties, "index", Status.INVALID_LOCATION, 0);
+
+        // invalid syntax
+        properties = LuaScanner.parse("a,b,c\ngo.property('var', 1)").properties();
+        assertEquals(0, properties.size());
+
+        // if
+        properties = LuaScanner.parse("if go.property('enabled', true) then end").properties();
+        assertEquals(1, properties.size());
+        assertPropertyStatus(properties, "enabled", Status.INVALID_LOCATION, 0);
+    }
+
+    @Test
+    public void testErrorMessages() {
+        var errors = LuaScanner.parse("go.property)").errors();
+        assertEquals(1, errors.size());
+        assertEquals("extraneous input ')' expecting <EOF>", errors.get(0).message());
+
+        errors = LuaScanner.parse("local max_speed = 60|= <!ed\\n\\tend\\nend+-!\\n").errors();
+        assertEquals(8, errors.size());
+
+        errors = LuaScanner.parse("go.property('foo', vmath.vector3(1a, 2, 3))").errors();
+        assertEquals(4, errors.size());
+        assertEquals("missing ')' at '('", errors.get(0).message());
+        assertEquals("mismatched input '2' expecting {'(', NAME}", errors.get(1).message());
+        assertEquals("mismatched input '3' expecting {'(', NAME}", errors.get(2).message());
+        assertEquals("expecting a function", errors.get(3).message());
+
+        errors = LuaScanner.parse("go.property('local', resource.atlas(atlas_path))").errors();
+        assertEquals(1, errors.size());
+        assertEquals("expected a string literal resource argument", errors.get(0).message());
     }
 }
